# naucse

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
naucse/: arca_renderer.py  cli.py  compiled_renderer.py  converters.py  datetimes.py  edit_info.py  exceptions.py  local_renderer.py  models.py  sanitize.py  templates.py  urlconverters.py  views.py
naucse/static/css/: body.css  naucse.css  reveal-theme.css  reveal-theme.scss
naucse/templates/: _base.html  _base_course.html  dev_course_list.html  index.html  lesson.html
test_naucse/: conftest.py  test_arca_render.py  test_course.py  test_datetimes.py  test_forks.py  test_git_identifier.py  test_model.py  test_schema.py  test_session_times.py  test_validation.py  test_views.py
test_naucse/fixtures/compiled-course/: course.json
test_naucse/fixtures/compiled-missing-page/: course.json
test_naucse/fixtures/compiled-missing-static/: course.json
test_naucse/fixtures/course-data/: complex-course.yml  course-v0.2.yml  course-v0.3.yml  course-v0.4.yml  invalid-duplicate-session.yml
test_naucse/fixtures/expected-dumps/: complex-course.v0.0.yaml  complex-course.v0.1.yaml  complex-course.v0.2.yaml  complex-course.v0.3.yaml  complex-course.v0.4.yaml  course-v0.1.v0.2.yaml  course-v0.1.v0.3.yaml  course-v0.1.v0.4.yaml  course-v0.2.v0.0.yaml  course-v0.2.v0.1.yaml  course-v0.2.v0.2.yaml  course-v0.2.v0.3.yaml  course-v0.2.v0.4.yaml  course-v0.3.v0.0.yaml  course-v0.3.v0.1.yaml  course-v0.3.v0.2.yaml  course-v0.3.v0.3.yaml  course-v0.3.v0.4.yaml  course-v0.4.v0.0.yaml  course-v0.4.v0.1.yaml  course-v0.4.v0.2.yaml  course-v0.4.v0.3.yaml  course-v0.4.v0.4.yaml  empty-root.v0.2.yaml  empty-root.v0.3.yaml  (+17 more)
(+39 files in other folders)
