[metadata]
name = naucse
version = 0.5.2
description = Website for course materials
long_description = file: README.md
long_description_content_type = text/markdown
author = Petr Viktorin & others
author_email = encukou@gmail.com
license = MIT
license_files = LICENSE.MIT
url = https://github.com/pyvec/naucse

[options]
packages =
    naucse
include_package_data = True
zip_safe = False
install_requires =
    elsa
    ics
    cssutils
    PyYAML
    Flask
    Jinja2
    Werkzeug
    jsonschema
    lxml
    naucse-render >= 1.7
    backports.zoneinfo; python_version<"3.9"
    tzdata; sys_platform=="win32"
    markupsafe
    gitpathlib

[options.extras_require]
dev =
    tox
    pytest
